--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ jdk:
   - openjdk6
 cache:
   directories:
-  - $HOME/.ivy2
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
 before_cache:
-  - find $HOME/.ivy2 -type f -name "ivydata-*.properties"
-  - find $HOME/.ivy2 -type f -name "ivydata-*.properties" -delete
-  - find $HOME/.ivy2 -type f -name "ivydata-*.properties"
+  # Cleanup the cached directories to avoid unnecessary cache updates
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.sbt        -name "*.lock"               -print -delete
