--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
+script:
+   - sbt ++$TRAVIS_SCALA_VERSION clean coverage test
+after_success:
+  - sbt coveralls
