Add codecov.io to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,4 @@ script:
    - sbt ++$TRAVIS_SCALA_VERSION clean coverage test
 after_success:
   - sbt coverageReport coveralls
+  - bash <(curl -s https://codecov.io/bash)
